# structs/authStruct.go
@@ -1,0 +1,12 @@
+package structs
+
+type User struct {
+	Id       int    `json:"id" db:"id"`
+	Username string `json:"username" binding:"required" db:"username"`
+	Password string `json:"password" binding:"required" db:"password"`
+}
+
+type UserAdd struct {
+	Username string `json:"username" binding:"required" db:"username"`
+	Password string `json:"password" binding:"required" db:"password"`
+}
